--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@
 body {
     color: navy;
     background-color: lightgrey;
+    font-size: 120%;
 }
 
 header {
@@ -52,8 +53,9 @@ h2 {
 }
 
 h4 {
-    padding: 15px 0 30px 30px;
+    padding: 30px;
     font-size: 150%;
+    text-align: center;
 }
 
 p {
@@ -75,7 +77,7 @@ th {
 th,
 td {
     border: 1px solid black;
-    padding: 4px 8px;
+    padding: 4px 8px 12px 8px;
     width: 38%;
 }
 
@@ -104,12 +106,63 @@ section {
     border: 1px solid black;
 }
 
-.white {
+.yellow {
     background-color: yellow;
 }
 
-.yellow {
+.white {
     background-color: rgb(255, 255, 255);
+}
+
+.egg-image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px 50px;
+    padding-bottom: 50px;
+}
+
+/* media-query*/
+
+@media screen and (min-width: 1201px) {
+    .egg-image {
+        width: 50%;
+        height: 50%;
+    }
+
+    #header-egg {
+        width: 40%;
+        height: 40%;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .egg-image {
+        width: 65%;
+        height: 65%;
+    }
+
+    th,
+    td {
+        padding: 4px 8px;
+    }
+
+    #header-egg {
+        width: 55%;
+        height: 55%;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .egg-image {
+        width: 75%;
+        height: 75%;
+    }
+
+    #header-egg {
+        width: 65%;
+        height: 65%;
+    }
 }
 
 /* footer */
@@ -142,7 +195,7 @@ footer {
 
 #twitter:hover {
     font-size: 350%;
-    color: aqua;
+    color: rgb(0, 196, 196);
 }
 
 #youtube:hover {
