--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,11 +183,31 @@ section {
     }
 }
 
+@media screen and (max-width: 600px) {
+    .egg-image {
+        width: 65%;
+        height: 65%;
+    }
+
+    #header-egg {
+        width: 55%;
+        height: 55%;
+    }
+
+    body {
+        font-size: 60%;
+    }
+
+    nav {
+        font-size: 50%;
+    }
+}
+
 /* footer */
 
 footer {
     height: 100px;
-    padding-bottom: 20px;
+    padding-bottom: 30px;
     background-color: rgb(161, 248, 161);
 }
 
