--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,6 +203,27 @@ section {
     }
 }
 
+@media screen and (max-width: 320px) {
+    .egg-image {
+        width: 80%;
+        height: 80%;
+    }
+
+    #header-egg {
+        width: 50%;
+        height: 50%;
+    }
+
+    body {
+        font-size: 50%;
+    }
+
+    nav {
+        font-size: 40%;
+    }
+}
+
+
 /* footer */
 
 footer {
