--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,7 +199,7 @@ section {
     }
 
     nav {
-        font-size: 50%;
+        font-size: 70%;
     }
 }
 
@@ -215,12 +215,15 @@ section {
     }
 
     body {
-        font-size: 50%;
+        font-size: 60%;
+        padding: 0;
+        margin: 0;
     }
 
     nav {
-        font-size: 40%;
-        padding: 0 5 px;
+        font-size: 100%;
+        padding: 0;
+        margin: 0;
     }
 }
 
