--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,6 +223,26 @@ section {
     }
 }
 
+@media screen and (max-width: 460px) {
+    .egg-image {
+        width: 60%;
+        height: 60%;
+    }
+
+    #header-egg {
+        width: 50%;
+        height: 50%;
+    }
+
+    body {
+        font-size: 60%;
+    }
+
+    nav {
+        font-size: 80%;
+    }
+}
+
 @media screen and (max-width: 420px) {
     .egg-image {
         width: 80%;
