--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -339,6 +339,29 @@ section {
     }
 }
 
+@media screen and (max-width: 370px) {
+    .egg-image {
+        width: 80%;
+        height: 80%;
+    }
+
+    #header-egg {
+        width: 50%;
+        height: 50%;
+    }
+
+    body {
+        font-size: 80%;
+        padding: 0;
+        margin: 0;
+    }
+
+    nav {
+        font-size: 60%;
+        padding: 0;
+        margin: 0;
+    }
+}
 
 /* footer */
 
