--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -363,6 +363,30 @@ section {
     }
 }
 
+@media screen and (max-width: 330px) {
+    .egg-image {
+        width: 80%;
+        height: 80%;
+    }
+
+    #header-egg {
+        width: 50%;
+        height: 50%;
+    }
+
+    body {
+        font-size: 60%;
+        padding: 0;
+        margin: 0;
+    }
+
+    nav {
+        font-size: 50%;
+        padding: 0;
+        margin: 0;
+    }
+}
+
 /* footer */
 
 footer {
