--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,195 +195,62 @@ section {
     }
 
     body {
-        font-size: 80%;
+        font-size: 1rem;
     }
 
     nav {
         font-size: 70%;
+    }
+}
+
+@media screen and (max-width: 560px) {
+    .egg-image {
+        width: 60%;
+        height: 60%;
+    }
+
+    #header-egg {
+        width: 50%;
+        height: 50%;
+    }
+    nav {
+        font-size: 60%;
     }
 }
 
 @media screen and (max-width: 520px) {
-    .egg-image {
-        width: 60%;
-        height: 60%;
-    }
-
-    #header-egg {
-        width: 50%;
-        height: 50%;
-    }
-
-    body {
-        font-size: 70%;
-    }
-
-    nav {
-        font-size: 60%;
-    }
-}
-
-@media screen and (max-width: 460px) {
-    .egg-image {
-        width: 60%;
-        height: 60%;
-    }
-
-    #header-egg {
-        width: 50%;
-        height: 50%;
-    }
-
-    body {
-        font-size: 60%;
-    }
-
     nav {
         font-size: 80%;
     }
 }
 
-@media screen and (max-width: 440px) {
+@media screen and (max-width: 460px) {
+    nav {
+        font-size: 70%;
+    }
+}
+
+@media screen and (max-width: 420px) {
     .egg-image {
         width: 80%;
         height: 80%;
     }
-
-    #header-egg {
-        width: 50%;
-        height: 50%;
-    }
-
-    body {
-        font-size: 70%;
-        padding: 0;
-        margin: 0;
-    }
-
     nav {
         font-size: 60%;
-        padding: 0;
-        margin: 0;
-    }
-}
-
-@media screen and (max-width: 410px) {
-    .egg-image {
-        width: 80%;
-        height: 80%;
-    }
-
-    #header-egg {
-        width: 50%;
-        height: 50%;
-    }
-
-    body {
-        font-size: 70%;
-        padding: 0;
-        margin: 0;
-    }
-
-    nav {
-        font-size: 55%;
-        padding: 0 10px;
-        margin: 0;
-    }
-}
-
-@media screen and (max-width: 410px) {
-    .egg-image {
-        width: 80%;
-        height: 80%;
-    }
-
-    #header-egg {
-        width: 50%;
-        height: 50%;
-    }
-
-    body {
-        font-size: 70%;
-        padding: 0;
-        margin: 0;
-    }
-
-    nav {
-        font-size: 55%;
         padding: 0 10px;
         margin: 0;
     }
 }
 
 @media screen and (max-width: 390px) {
-    .egg-image {
-        width: 80%;
-        height: 80%;
+    nav {
+        font-size: 50%;
     }
+}
 
-    #header-egg {
-        width: 50%;
-        height: 50%;
-    }
-
-    body {
+@media screen and (max-width: 340px) {
+    nav {
         font-size: 70%;
-        padding: 0;
-        margin: 0;
-    }
-
-    nav {
-        font-size: 50%;
-        padding: 0;
-        margin: 0;
-    }
-}
-
-@media screen and (max-width: 370px) {
-    .egg-image {
-        width: 80%;
-        height: 80%;
-    }
-
-    #header-egg {
-        width: 50%;
-        height: 50%;
-    }
-
-    body {
-        font-size: 80%;
-        padding: 0;
-        margin: 0;
-    }
-
-    nav {
-        font-size: 60%;
-        padding: 0;
-        margin: 0;
-    }
-}
-
-@media screen and (max-width: 330px) {
-    .egg-image {
-        width: 80%;
-        height: 80%;
-    }
-
-    #header-egg {
-        width: 50%;
-        height: 50%;
-    }
-
-    body {
-        font-size: 60%;
-        padding: 0;
-        margin: 0;
-    }
-
-    nav {
-        font-size: 50%;
-        padding: 0;
-        margin: 0;
     }
 }
 
